// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly, hyperdrive_rating as number 1`] = `
<div
  className="m-4 card"
>
  <div
    className="card-body"
  >
    <div>
      <strong>
        Name: 
        123-532-M
      </strong>
    </div>
    <div>
      Crew: 
      5
    </div>
    <div>
      Passengers: 
      unknown
    </div>
    <div
      className="row"
    >
      <div
        className="col-md-auto"
      >
        Hyperdrive Class:
      </div>
      <div
        className="align-self-center col"
      >
        <div
          className="progress"
        >
          <div
            aria-valuemax={100}
            aria-valuemin={0}
            aria-valuenow={20}
            className="progress-bar bg-info"
            role="progressbar"
            style={
              Object {
                "width": "20%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly, hyperdrive_rating as unknown 1`] = `
<div
  className="m-4 card"
>
  <div
    className="card-body"
  >
    <div>
      <strong>
        Name: 
        TestShip
      </strong>
    </div>
    <div>
      Crew: 
      5
    </div>
    <div>
      Passengers: 
      4900
    </div>
    <div
      className="row"
    >
      <div
        className="col-md-auto"
      >
        Hyperdrive Class:
      </div>
      <div
        className="align-self-center col"
      >
        <div
          className="progress"
        >
          <div
            aria-valuemax={100}
            aria-valuemin={0}
            aria-valuenow={0}
            className="progress-bar bg-info"
            role="progressbar"
            style={
              Object {
                "width": "0%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
